<resources>
    <string name="app_name">Mi Nauta</string>

    <string name="account_activity_text">Cuenta Nauta</string>
    <string name="configure_account_text">Configure su cuenta de Nauta</string>
    <string name="start_session_text">Iniciar sesión de Nauta</string>
    <string name="close_session_text">Cerrar sesión de Nauta</string>
    <string name="available_time_text">Tiempo disponible:</string>
    <string name="used_time_text">Tiempo utilizado:</string>

    <string name="connecting_text">Conectando...</string>
    <string name="closing_text">Cerrando...</string>

    <string name="close_session_warning">Para salir debe cerrar la sesion</string>
    <string name="login_error">No se pudo iniciar la sesión. Por favor, revise su conexión</string>
    <string name="already_connected_error">Ya existe un usuario conectado previamente. No necesita iniciar la sesión para acceder a internet</string>
    <string name="no_money_error">Su cuenta se ha quedado sin saldo</string>
    <string name="is_google_error">Su conexión a internet se encuentra abierta pero no tenemos forma de cerrarla. Cierre la WiFi o apague el router para desconectarse</string>
    <string name="unknown_username_error">No se reconoce el nombre de usuario</string>
    <string name="incorrect_password_error">La contraseña es incorrecta</string>
    <string name="logout_ok">La sesión se cerró correctamente</string>
    <string name="logout_error">No se pudo cerrar la sesión. Cierre la WiFi o apague el router para desconectarse</string>
    <string name="remove_account_warning">¿Desea borrar esta cuenta?</string>

    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_account_type">Tipo de cuenta</string>

    <string name="button_accept">Aceptar</string>
    <string name="button_configure">Configurar</string>
    <string name="button_start">Iniciar</string>
    <string name="button_close">Cerrar</string>
    <string name="button_portal">Ir al portal</string>

    <string name="captcha_title">Resuelva el captcha</string>
    <string name="captcha_text">Captcha</string>
    <string name="button_continue">Continuar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="session_limit_text">Establecer límite de sesión</string>

    <string name="seconds_text">segundos</string>
    <string name="minutes_text">minutos</string>
    <string name="hours_text">horas</string>
    <string name="session_started_as_text">Sesión iniciada como:</string>
    <string name="button_retry">Reintentar</string>

    <string name="international_account_text">Cuenta internacional</string>
    <string name="national_account_text">Cuenta nacional</string>
    <string name="international_account_value">nauta.com.cu</string>
    <string name="national_account_value">nauta.co.cu</string>
    <string name="soon_on_github_text">Pronto en github</string>
    <string name="alarm_timeout_text">Se ha alcanzado el límite de la sesión</string>
    <string name="no_accounts_text">Introduzca su cuenta</string>
    <string name="account_activity_title">Mis cuentas</string>
    <string name="session_activity_title">Sesión de Nauta</string>

</resources>
